add reference line comments

--- a/modules/perception/data/params/radar_extrinsics.yaml
+++ b/modules/perception/data/params/radar_extrinsics.yaml
@@ -3,15 +3,15 @@ header:
   stamp:
     secs: 0
     nsecs: 0
-  frame_id: front_6mm
+  frame_id: short_camera
 child_frame_id: radar
 transform:
-  translation:
-    x: 0.0
-    y: 1.0110000371933034
-    z: 2.4720000773668316
   rotation:
-    x: 0.5
-    y: -0.4999999999999999
-    z: 0.5
-    w: 0.5000000000000001
+    x: 0.5370174871300957
+    y: 0.5197173008295932
+    z: 0.4623163722908032
+    w: -0.4772522578749639
+  translation:
+    x: 0.04894393984902981
+    y: 1.168500489918554
+    z: 1.371936986822701
